<resources>
    <!--System-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!--Login Fragment-->
    <string name="action_regist_new_account">Зарегистрироваться</string>
    <string name="action_sign_in_account">Войти</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="prompt_email">Логин (электронная почта):</string>
    <string name="prompt_password">Пароль</string>
    <string name="password_confirm">Подтверждение пароля</string>



    <!--Utils-->
    <string name="loading">Загрузка</string>
    <!--Drawler_Menu_Items-->
    <string name="menu_all_orders">Все заявки</string>
    <string name="menu_my_orders">Мои заявки</string>
    <string name="menu_call_to_dispatcher">Позвонить диспетчеру</string>
    <string name="menu_exit">Выйти</string>
    <string name="menu_instruction">Инструкции</string>
    <string name="menu_help">Помощь</string>
    <!--Registr Person Data Fragment-->
    <string name="your_surname">Ваша фамилия:</string>
    <string name="your_name">Ваше имя:</string>
    <string name="your_city">Город:</string>
    <string name="your_sex">Ваш пол:</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="your_bithday">День рождения:</string>
    <string name="your_birthday">День рождения:</string>
    <!--Registr Phone Fragment-->
    <string name="sms_information">На указанный номер телефона будет отправлено сообщение с кодом подтверждения</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="confirmation_text">Я ознакомлен/а с <a href="http://api.yargo.pro/site/oferta">правилами</a> и <a href="http://api.yargo.pro/pdn">политикой конфиденциальности</a> и принимаю их условия</string>
    <string name="getRegistrationCode">Получить код</string>
    <string name="OK">ОК</string>
    <string name="mobile_number_incorrect">Мобильный номер уже используется, проверьте правильность ввода</string>
    <string name="email_incorrect">Электронная почта уже используется, проверьте правильность ввода</string>
    <string name="email_and_phone_incorrect">Электронная почта и мобильный номер уже используется, проверьте правильность ввода</string>
    <string name="somethings_goes_wrong">Что-то пошло не так</string>
    <string name="password_not_match">Пароли не совпадают</string>
    <string name="password_is_short">Пароль слишком короткий (менее 5 символов)</string>


</resources>
